[package]
name = "sitemap_crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
spider = { version = "2.26.3", features = ["sync", "chrome", "cache_chrome_hybrid"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
html2md = "0.2"
reqwest = { version = "0.11", features = ["blocking"] }
playwright = "0.0.18" 