[package]
name = "sitemap_crawler"
version = "0.1.0"
edition = "2021"

[dependencies]
spider = { version = "2"}
tokio = { version = "1", features = ["full"] }
futures = "0.3"
html2md = "0.2"
reqwest = { version = "0.11", features = ["blocking"] }
chromiumoxide = "0.7"
tracing-subscriber = "0.3"
playwright = "0.0.18" 